# pocket-sdk

./: Cargo.toml  README.md
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/shannon-protos/: Cargo.toml  buf.yaml  build.rs
crates/shannon-protos/proto/: buf.gen.yaml  buf.yaml
crates/shannon-protos/src/: _includes.rs  cosmos.app.v1alpha1.rs  cosmos.base.query.v1beta1.rs  cosmos.base.v1beta1.rs  lib.rs  pocket.application.module.rs  pocket.application.rs  pocket.gateway.module.rs  pocket.gateway.rs  pocket.migration.module.rs  pocket.migration.rs  pocket.proof.module.rs  pocket.proof.rs  pocket.service.module.rs  pocket.service.rs  pocket.session.module.rs  pocket.session.rs  pocket.shared.module.rs  pocket.shared.rs  pocket.supplier.module.rs  pocket.supplier.rs  pocket.tokenomics.module.rs  pocket.tokenomics.rs
crates/shannon-protos/src/~/.config/nvim-data/undodir/: %Users%crypdoughdoteth%dev%active%shannon-sdk%build.rs
crates/shannon-protos/~/.config/nvim-data/undodir/: %Users%crypdoughdoteth%dev%active%shannon-sdk%Cargo.toml  %Users%crypdoughdoteth%dev%active%shannon-sdk%buf.work.yaml  %Users%crypdoughdoteth%dev%active%shannon-sdk%build.rs  %Users%crypdoughdoteth%dev%active%shannon-sdk%src%_includes.rs  %Users%crypdoughdoteth%dev%active%shannon-sdk%src%cosmos.app.v1alpha1.rs  %Users%crypdoughdoteth%dev%active%shannon-sdk%src%google.api.rs  %Users%crypdoughdoteth%dev%active%shannon-sdk%src%lib.rs  %Users%crypdoughdoteth%dev%active%shannon-sdk%src%pocket.application.rs
crates/shannon-sdk/: Cargo.toml
crates/shannon-sdk/src/: lib.rs
