[workspace]
resolver = "3"

members = [
    "crates/example", 
    "crates/shannon-protos", 
    "crates/shannon-sdk"
]

[workspace.dependencies]
cosmos-sdk-proto = { version = "0.27", default-features = false, features = ["grpc"] }
prost = { version = "0.14.3", default-features = false }
prost-types = "0.14.3"
rustls = { version = "0.23.0", features = ["aws-lc-rs"] }
tonic = { version = "0.14.5", default-features = false, features = ["codegen", "tls-native-roots"] }
tokio = {version = "1.45.0", features = ["macros", "rt-multi-thread"]}
tonic-prost-build = "0.14.5"
tonic-prost = "0.14.5"
serde = { version = "1.0.228", features = ["derive"] }
sstr = "0.1.4"
k256 = "0.13.4"
