[package]
name = "shannon-protos"
version = "0.1.0"
edition = "2024"

[features]
default = ["grpc-transport"]
grpc-transport = ["tonic/transport"]

[dependencies]
cosmos-sdk-proto = { version = "0.27", default-features = false, features = ["grpc"] }
tonic = {version = "0.12", features = ["transport","tls-native-roots"]}
prost = "0.13.5"
prost-types = "0.13.5"

[build-dependencies]
regex = "1.11.1"
tonic-buf-build = "0.3.0"
prost-build = "0.13" 
tonic-build = "0.12" 
