[package]
name = "shannon-protos"
version = "0.1.0"
edition = "2024"

[features]
default = ["grpc-transport"]
grpc-transport = ["tonic/transport"]

[dependencies]
cosmos-sdk-proto = { workspace = true, default-features = false, features = ["grpc"] }
prost = { workspace = true, default-features = false }
prost-types = { workspace = true }
tonic = { workspace = true, default-features = false, features = ["codegen"] }
tonic-prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
